--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,17 @@
     "license": "beerware",
 
     "require": {
-        "php": ">=5.4",
+        "php": ">=5.6",
         "behat/behat": "~3.0",
         "behat/mink-extension": "~2.0",
         "justinrainbow/json-schema": "~2.0",
-        "symfony/property-access": "~2.3|~3.0"
+        "symfony/property-access": "~2.3|~3.0|~4.0"
     },
 
     "require-dev": {
         "behat/mink-goutte-driver": "~1.1",
         "behat/mink-selenium2-driver": "~1.2",
-        "atoum/atoum": "dev-master"
+        "atoum/atoum": "~3.0"
     },
 
     "autoload": {
