--- a/src/Resources/services/http_call.yml
+++ b/src/Resources/services/http_call.yml
@@ -16,7 +16,7 @@ services:
         tags:
             - { name: behatch.context_voter }
 
-    Behatch.http_call.request:
+    behatch.http_call.request:
         class: Sanpi\Behatch\HttpCall\Request
         arguments: ["@mink"]
 
